--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(31, 28, 28);
+    background-color: #d499f1;
 }
 .grid {
     display: flex;
@@ -21,8 +21,12 @@ body{
 
 h1{
     text-align: center;
-    color: rgb(230, 181, 253);
+    color: rgb(255, 255, 255);
     text-shadow: 1px 2px 2px black;
-    font-family: Corbel;
+    font-family: Arial;
     font-weight: 700;
+}
+
+h3 {
+    font-family: Arial;
 }
